# internship-eod-automation

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_GUIDE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  skills-lock.json
app/: cli.py  main.py
app/agent/: examples.json  graph.py  llm.py  nodes.py  prompts.py  state.py
app/agent/internity/: nodes.py  prompts.py
app/agent/monthly/: nodes.py  prompts.py
app/agent/teams/: examples.json  graph.py  nodes.py  prompts.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: activities.py  pages.py  reports.py
app/core/: config.py  database.py
app/models/: activity.py  report.py  settings.py
app/repositories/: activity_repo.py  base.py  report_repo.py
app/schemas/: activity.py  report.py
app/services/: activity_service.py  report_service.py  teams_service.py
app/services/internity/: poster.py
app/services/internity.py/: poster.py
app/services/teams/: poster.py
app/static/: style.css
app/templates/: base.html  dashboard.html  history.html  monthly.html  preview.html
docs/: IMPLEMENTATION_GUIDE.md  INTERNITY_INTEGRATION.md
